--- a/debian/buster/debian/changelog
+++ b/debian/buster/debian/changelog
@@ -2,5 +2,11 @@ ignition-dome (1.0.0~pre1-1~buster) buster; urgency=medium
 
   * ignition-dome 1.0.0~pre1-1 release
 
+ -- Louise Poubel <louise@openrobotics.org>  Wed, 23 Sep 2020 16:44:44 -0700
+
+ignition-dome (1.0.0~pre1-1~buster) buster; urgency=medium
+
+  * ignition-dome 1.0.0~pre1-1 release
+
  -- Jose Luis Rivero <jrivero@osrfoundation.org>  Thu, 24 Sep 2020 00:18:35 +0200
 
