--- a/debian/buster/debian/changelog
+++ b/debian/buster/debian/changelog
@@ -1,3 +1,9 @@
+ignition-dome (1.0.0-1~buster) buster; urgency=medium
+
+  * ignition-dome 1.0.0-1 release
+
+ -- Jose Luis Rivero <jrivero@osrfoundation.org>  Thu, 01 Oct 2020 18:42:01 +0200
+
 ignition-dome (1.0.0~pre1-1~buster) buster; urgency=medium
 
   * ignition-dome 1.0.0~pre1-1 release
