--- a/debian/buster/debian/changelog
+++ b/debian/buster/debian/changelog
@@ -1,3 +1,9 @@
+ignition-dome (1.0.0-2~buster) buster; urgency=medium
+
+  * ignition-dome 1.0.0-2 release
+
+ -- Louise Poubel <louise@openrobotics.org>  Mon, 04 Jan 2021 10:48:38 -0800
+
 ignition-dome (1.0.0-1~buster) buster; urgency=medium
 
   * ignition-dome 1.0.0-1 release
